fixed landingPage display on mobile

--- a/app/scss/LandingPage.scss
+++ b/app/scss/LandingPage.scss
@@ -56,7 +56,7 @@
   }
 
   .current-image {
-    position: absolute;
+    position: fixed;
     // z-index: -2;
     left: 0;
     top: 0;
